--- a/src/web/template/docs.html
+++ b/src/web/template/docs.html
@@ -7,6 +7,10 @@
 <link text="text/css"  href="{{ url_for('static', filename='css/index.css') }}" rel="stylesheet">
 <script src="{{ url_for('static', filename='js/docs.js') }}" defer></script>
 
+<div class="loader" id="loader">
+    <div class="loader-spinner"></div>
+</div>
+
 <table>
     <thead>
         <tr>
